--- a/css/typography.css
+++ b/css/typography.css
@@ -3,6 +3,7 @@ body {
   font-family: "Rubik", Arial, Helvetica, sans-serif, sans-serif;
   font-size: 20px;
   line-height: 1.6;
+  color: #fff;
 }
 
 /* display font */
