--- a/css/typography.css
+++ b/css/typography.css
@@ -1,13 +1,17 @@
 /* text font */
 body {
   font-family: "Rubik", Arial, Helvetica, sans-serif, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.6;
   color: #fff;
 }
 
 /* display font */
-h1 {
+h1, h2 {
   font-family: "Michroma", Arial, Helvetica, sans-serif;
   font-size: 60px;
+}
+
+h2 {
+  font-size: 22px;
 }
