--- a/css/typography.css
+++ b/css/typography.css
@@ -3,6 +3,8 @@ body {
   font-family: "Rubik", Arial, Helvetica, sans-serif, sans-serif;
   font-size: 18px;
   line-height: 1.6;
+  text-align: center;
+  
   color: #fff;
 }
 
