changed flexbox padding

--- a/css/layout.css
+++ b/css/layout.css
@@ -53,7 +53,7 @@ section p {
 /* flex box to configure card layout on screen */
 .cards-flex-container {
   display: flex;
-  padding: 1rem 0 1rem 0;
+  padding: 1rem;
   
   align-items: center;
   justify-content: center;
