adjusted margin, refactored media query

--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ h1 {
 article {
   background-color: transparent;
   
-  margin: 0 1rem 1rem 1rem;
+  margin: 0 1rem 0 1rem;
   max-width: 20ch;
   padding: 1rem;
   
